# actas-cnn

./: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  QUALITY_REPORT.md  README.md  build_dataset.py  config.py  dataset.py  env.py  extract_crops.py  fiducial_anchors.json  pdf_to_images.py  program.md  pyproject.toml  requirements.txt  results.tsv  storage.py  templates.json  train.py
archive/: README.md
configs/: baseline_full.json  baseline_smoke.json  run_001_ls01.json
docs/: 00-contexto.md  01-decisiones.md  02-migracion.md  03-pipeline-datos.md  04-modelo-entrenamiento.md  05-backlog.md  06-definicion-proyecto.md  07-presentacion-outline.md  08-lakehouse.md  08-setup-colab.md  08-walkthrough-codigo.md  09-checksum-solver.md
experiments/: README.md
lakehouse/: __init__.py  bronze.py  export_sheets.py  field_mapping.py  gold.py  io_delta.py  paths.py  quality.py  silver.py
notebooks/: 01_preprocesamiento_colab.ipynb  02_entregable_colab.ipynb  02_modelo_colab.ipynb  03_ablaciones_colab.ipynb  kaggle_hp_search.ipynb  pipeline_demo.ipynb  pipeline_demo_colab.ipynb  train_portable.ipynb
scripts/: ablation_table.py  audit.py  audit_errors.py  audit_fiducial_detector.py  audit_render_quality.py  audit_template_generalization.py  build_crops.py  build_dataset.py  build_lakehouse.py  checksum_solver.py  detect_fiducials.py  evaluate.py  evaluate_with_solver.py  inspect_labels.py  preview_crops.py  preview_template.py  regenerate_anchors.py  run_experiment.py  run_week1_clean_pipeline.sh  split_dataset.py  test_alignment.py  train.py
tools/: _inline_code.py  (+1 more)
(+42 files in other folders)
