[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "actas-cnn"
version = "0.2.0"
description = "CNN para reconocer cifras manuscritas de conteo de votos en actas electorales ONPE (Elecciones Generales del Peru 2026)."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
